Implemented Part 1 & Part 2
